# practice-halo2

./: Cargo.toml
src/: lib.rs  multiply.rs
src/chap1/: ex1.rs
src/chap2/: mod.rs  simple_chip.rs
src/fibonacci/: example1.rs
