[package]
name = "halo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
ff = "0.13"
halo2_proofs = { git = "https://github.com/zcash/halo2.git"}
plotters = { version = "0.3.5", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
rand = "0.8.5"
group = "0.13.0"
